[gd_scene load_steps=2 format=3 uid="uid://c37o7rn600m8x"]

[ext_resource type="Script" path="res://PlayerScene/VoiceChannelControl/voice_channel_control.gd" id="1_fn83k"]

[node name="VoiceChannel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1795.0
offset_bottom = -780.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn83k")

[node name="NumberLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 120.0
offset_bottom = 44.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ch_NameLbl" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 49.0
offset_right = 120.0
offset_bottom = 89.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 114.0
offset_right = 66.0
offset_bottom = 228.0
scale = Vector2(1.5, 1.5)
step = 0.1

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
